fixed  no favourite issues message on mobile

--- a/src/styles/favourites.module.css
+++ b/src/styles/favourites.module.css
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 600px) {
 	.message {
-		top: 34%;
+		top: 32%;
 	}
 }
 .action {
